fix: handle env on ios

--- a/src/app/_css/globals.css
+++ b/src/app/_css/globals.css
@@ -8,17 +8,16 @@
   @apply contents;
 }
 
+/* Managed in src/capacitor/index.ts */
 :root {
-  --safe-area-top-inset: env(safe-area-inset-top, var(--safe-area-top, 0px));
-  --safe-area-right-inset: env(
-    safe-area-inset-right,
-    var(--safe-area-right, 0px)
-  );
-  --safe-area-bottom-inset: env(
-    safe-area-inset-bottom,
-    var(--safe-area-bottom, 0px)
-  );
-  --safe-area-left-inset: env(safe-area-inset-left, var(--safe-area-left, 0px));
+  --env-safe-area-inset-top: env(safe-area-inset-top);
+  --env-safe-area-inset-right: env(safe-area-inset-right);
+  --env-safe-area-inset-bottom: env(safe-area-inset-bottom);
+  --env-safe-area-inset-left: env(safe-area-inset-left);
+  --safe-area-top-inset: var(--safe-area-top, 0px);
+  --safe-area-right-inset: var(--safe-area-right, 0px);
+  --safe-area-bottom-inset: var(--safe-area-bottom, 0px);
+  --safe-area-left-inset: var(--safe-area-left, 0px);
 }
 
 html {
